# methodiqal

./: .gitignore  Cargo.toml  LICENSE  README  data_auth.db  example.env
methodiqal/: Assignment.swift  AssignmentRunner.swift  AssignmentStore.swift  AssignmentView.swift  AuthToken.swift  Canvas.swift  ContentView.swift  Course.swift  EventAdder.swift  LmsAccountCreateView.swift  LmsAccountManager.swift  LmsAccountStore.swift  LmsAccountStoreKeychain.swift  LoginController.swift  LoginView.swift  SettingsView.swift  SharedSession.swift  methodiqalApp.swift
methodiqal.xcodeproj/: project.pbxproj
methodiqal.xcodeproj/xcshareddata/xcschemes/: methodiqal.xcscheme
methodiqal/Assets.xcassets/AccentColor.colorset/: Contents.json
methodiqal/Assets.xcassets/AppIcon.appiconset/: Contents.json
methodiqal/Assets.xcassets/DarkLoginSplash0.imageset/: Contents.json
methodiqal/Assets.xcassets/DarkLoginSplash1.imageset/: Contents.json
methodiqal/Assets.xcassets/DarkLoginSplash2.imageset/: Contents.json
methodiqal/Assets.xcassets/DarkLoginSplash3.imageset/: Contents.json
methodiqal/Assets.xcassets/LightLoginSplash0.imageset/: Contents.json
methodiqal/Assets.xcassets/LightLoginSplash3.imageset/: Contents.json
src/: auth.rs  db_auth.rs  jwt.rs  main.rs  session.rs
