[package]
name = "methodiqal"
version = "1.0.0"
edition = "2024"
homepage = "https://jayagra.com/"
repository = "https://github.com/JayAgra/methodiqal"
license = "Copyright (c) 2025 Jayen Agrawal. All rights reserved."

[dependencies]
actix-governor = "0.5.0"
actix-http = "3.4"
actix-web = { version = "4.4", features = ["openssl"] }
argon2 = "0.5.2"
chrono = { version = "~0.4" }
dotenv = "0.15.0"
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
jsonwebtoken = "9"
log = "0.4"
regex = "1.10.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-rustls"] }
